# promethean-light

./: .clauderc  .env.example  .gitignore  ADD_TO_STARTUP.bat  BACKUP.bat  Dockerfile  EMAIL_CONFIG.bat  HOW_TO_USE_WITH_CLAUDE.md  ML_ENHANCEMENTS.md  MULTI_DATABASE_GUIDE.md  QUICK.bat  QUICKSTART.md  README.md  RUN_TRAY.bat  SAFETY_GUARANTEES.md  START.bat  START_PL2000.bat  START_TRAY.bat  START_TRAY_SILENT.vbs  TEAM_SHARING_GUIDE.md  USAGE_GUIDE.md  check_daemon_status.py  docker-compose.yml  install.sh  launch.ps1  launch.sh  mcp_server.py  program_view_jan2026.html  pyproject.toml  rebuild_vectordb.py  system_tray.py  team_meeting_14jan2026.html
archive_scripts/: ADD_FIREWALL_RULE.ps1  ADD_OUTLOOK.bat  AUTHENTICATION_SETUP_GUIDE.md  BACKUP_HOURLY.bat  BACKUP_NOW.bat  BACKUP_README.md  CHATBOT_SETUP.md  COMMANDS.bat  CONFIGURE_24_7_LAPTOP.bat  DEBUG_START.bat  DISABLE_NETWORK_ACCESS.bat  DOCUMENT_EXTRACTION_GUIDE.md  ENABLE_NETWORK_ACCESS.bat  ENABLE_OFFICE365_SMTP.md  ENGINEERING_HANDOVER_GUIDE.md  FINAL_SETUP_INSTRUCTIONS.md  GRITLM_PERFORMANCE_GUIDE.md  GRITLM_UPGRADE_README.md  HOW_TO_USE_WITH_CLAUDE.md  INSTALL.bat  INSTALL_AUTHENTICATION.bat  INSTALL_AUTO_START.bat  INSTALL_BACKUP_SCHEDULE.bat  INSTALL_HOURLY_BACKUP_SCHEDULE.bat  INSTALL_TO_STARTUP.bat  KILL.bat  LAPTOP_SERVER_SETUP.md  LAUNCH_PROJECTS.bat  PERFORMANCE_IMPROVEMENTS.md  PROJECT_COMPLETE.md  PROJECT_KICKOFF_PROCESS.md  PROJECT_LAUNCHER_README.md  QUICK_SETUP.md  QUICK_START_AUTHENTICATION.md  README.md  REBUILD_GRITLM.bat  REPORTS.bat  RESET.bat  RUN_TRAY.bat  SETUP_CLAUDE.md  (+137 more)
claude_tools/: add_email.py  add_note.py  get_stats.py  get_summary.py  get_tags.py  search_db.py
mydata/: api.py  (+35 more)
promethean-light-ui/src-tauri/: Cargo.toml  tauri.conf.json
promethean-light-ui/src-tauri/src/: lib.rs  main.rs
(+42 files in other folders)
